// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ArgumentItem /> render correcty 1`] = `
<ListGroupItem
  bsClass="list-group-item"
  className="opinion"
  id="arg-argument1"
  listItem={false}
>
  <Media
    overflow={true}
  >
    <Left>
      <ForwardRef(Relay(Connect(UserAvatar)))
        className="excerpt_dark"
        user={
          Object {
            "$fragmentRefs": null,
            "vip": false,
          }
        }
      />
    </Left>
    <Body
      className="opinion__body"
    >
      <div
        className="opinion__data"
      >
        <div
          className="opinion__user"
        >
          <ForwardRef(Relay(Connect(UserLink)))
            user={
              Object {
                "$fragmentRefs": null,
                "vip": false,
              }
            }
          />
          <span
            className="excerpt small"
          >
             • 
            <FormattedDate
              day="numeric"
              hour="numeric"
              minute="numeric"
              month="long"
              value={"2018-04-09T21:21:06.000Z"}
              year="numeric"
            />
          </span>
          <ForwardRef(Relay(Connect(UnpublishedLabel)))
            publishable={
              Object {
                "$fragmentRefs": null,
                "$refType": null,
                "author": Object {
                  "$fragmentRefs": null,
                  "vip": false,
                },
                "body": "<div>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor.</div>",
                "createdAt": "2018-04-09T23:21:06+0200",
                "id": "argument1",
                "publishedAt": "2018-04-09T23:21:06+0200",
                "related": Object {
                  "__typename": "Opinion",
                  "id": "opinion1",
                  "title": "Opinion 1",
                  "url": "https://capco.dev/projects/projet-de-loi-renseignement/consultation/elaboration-de-la-loi/opinions/titre-ier-la-circulation-des-donnees-et-du-savoir/chapitre-ier-economie-de-la-donnee/section-1-ouverture-des-donnees-publiques/article-1/versions/modification-2",
                },
                "type": "FOR",
              }
            }
          />
        </div>
      </div>
      <ForwardRef(Relay(TrashedMessage))
        contribution={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "$fragmentRefs": null,
              "vip": false,
            },
            "body": "<div>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor.</div>",
            "createdAt": "2018-04-09T23:21:06+0200",
            "id": "argument1",
            "publishedAt": "2018-04-09T23:21:06+0200",
            "related": Object {
              "__typename": "Opinion",
              "id": "opinion1",
              "title": "Opinion 1",
              "url": "https://capco.dev/projects/projet-de-loi-renseignement/consultation/elaboration-de-la-loi/opinions/titre-ier-la-circulation-des-donnees-et-du-savoir/chapitre-ier-economie-de-la-donnee/section-1-ouverture-des-donnees-publiques/article-1/versions/modification-2",
            },
            "type": "FOR",
          }
        }
      >
        <p
          className="opinion__text"
        >
          <Linkify
            className="Linkify"
            component="a"
            properties={
              Object {
                "className": "external-link",
              }
            }
          >
            &lt;div&gt;Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor.&lt;/div&gt;
          </Linkify>
        </p>
      </ForwardRef(Relay(TrashedMessage))>
      <ForwardRef(Relay(Connect(ArgumentButtons)))
        argument={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "$fragmentRefs": null,
              "vip": false,
            },
            "body": "<div>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor.</div>",
            "createdAt": "2018-04-09T23:21:06+0200",
            "id": "argument1",
            "publishedAt": "2018-04-09T23:21:06+0200",
            "related": Object {
              "__typename": "Opinion",
              "id": "opinion1",
              "title": "Opinion 1",
              "url": "https://capco.dev/projects/projet-de-loi-renseignement/consultation/elaboration-de-la-loi/opinions/titre-ier-la-circulation-des-donnees-et-du-savoir/chapitre-ier-economie-de-la-donnee/section-1-ouverture-des-donnees-publiques/article-1/versions/modification-2",
            },
            "type": "FOR",
          }
        }
      />
    </Body>
  </Media>
</ListGroupItem>
`;

exports[`<ArgumentItem /> render correcty on profile 1`] = `
<ListGroupItem
  bsClass="list-group-item"
  className="opinion"
  id="arg-argument1"
  listItem={false}
>
  <p>
    <FormattedMessage
      id="admin.fields.opinion.link"
      values={Object {}}
    />
     : 
    <a
      href="https://capco.dev/projects/projet-de-loi-renseignement/consultation/elaboration-de-la-loi/opinions/titre-ier-la-circulation-des-donnees-et-du-savoir/chapitre-ier-economie-de-la-donnee/section-1-ouverture-des-donnees-publiques/article-1/versions/modification-2"
    >
      Opinion 1
    </a>
  </p>
  <Media
    overflow={true}
  >
    <Left>
      <ForwardRef(Relay(Connect(UserAvatar)))
        className="excerpt_dark"
        user={
          Object {
            "$fragmentRefs": null,
            "vip": false,
          }
        }
      />
    </Left>
    <Body
      className="opinion__body"
    >
      <div
        className="opinion__data"
      >
        <div
          className="opinion__user"
        >
          <ForwardRef(Relay(Connect(UserLink)))
            user={
              Object {
                "$fragmentRefs": null,
                "vip": false,
              }
            }
          />
          <span
            className="excerpt small"
          >
             • 
            <FormattedDate
              day="numeric"
              hour="numeric"
              minute="numeric"
              month="long"
              value={"2018-04-09T21:21:06.000Z"}
              year="numeric"
            />
          </span>
          <ForwardRef(Relay(Connect(UnpublishedLabel)))
            publishable={
              Object {
                "$fragmentRefs": null,
                "$refType": null,
                "author": Object {
                  "$fragmentRefs": null,
                  "vip": false,
                },
                "body": "<div>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor.</div>",
                "createdAt": "2018-04-09T23:21:06+0200",
                "id": "argument1",
                "publishedAt": "2018-04-09T23:21:06+0200",
                "related": Object {
                  "__typename": "Opinion",
                  "id": "opinion1",
                  "title": "Opinion 1",
                  "url": "https://capco.dev/projects/projet-de-loi-renseignement/consultation/elaboration-de-la-loi/opinions/titre-ier-la-circulation-des-donnees-et-du-savoir/chapitre-ier-economie-de-la-donnee/section-1-ouverture-des-donnees-publiques/article-1/versions/modification-2",
                },
                "type": "FOR",
              }
            }
          />
           
          <Label
            bsClass="label"
            bsSize="xs"
            bsStyle="success"
          >
            <FormattedMessage
              id="argument.show.type.for"
              values={Object {}}
            />
          </Label>
        </div>
      </div>
      <ForwardRef(Relay(TrashedMessage))
        contribution={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "$fragmentRefs": null,
              "vip": false,
            },
            "body": "<div>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor.</div>",
            "createdAt": "2018-04-09T23:21:06+0200",
            "id": "argument1",
            "publishedAt": "2018-04-09T23:21:06+0200",
            "related": Object {
              "__typename": "Opinion",
              "id": "opinion1",
              "title": "Opinion 1",
              "url": "https://capco.dev/projects/projet-de-loi-renseignement/consultation/elaboration-de-la-loi/opinions/titre-ier-la-circulation-des-donnees-et-du-savoir/chapitre-ier-economie-de-la-donnee/section-1-ouverture-des-donnees-publiques/article-1/versions/modification-2",
            },
            "type": "FOR",
          }
        }
      >
        <p
          className="opinion__text"
        >
          <Linkify
            className="Linkify"
            component="a"
            properties={
              Object {
                "className": "external-link",
              }
            }
          >
            &lt;div&gt;Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor.&lt;/div&gt;
          </Linkify>
        </p>
      </ForwardRef(Relay(TrashedMessage))>
      <ForwardRef(Relay(Connect(ArgumentButtons)))
        argument={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "$fragmentRefs": null,
              "vip": false,
            },
            "body": "<div>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor.</div>",
            "createdAt": "2018-04-09T23:21:06+0200",
            "id": "argument1",
            "publishedAt": "2018-04-09T23:21:06+0200",
            "related": Object {
              "__typename": "Opinion",
              "id": "opinion1",
              "title": "Opinion 1",
              "url": "https://capco.dev/projects/projet-de-loi-renseignement/consultation/elaboration-de-la-loi/opinions/titre-ier-la-circulation-des-donnees-et-du-savoir/chapitre-ier-economie-de-la-donnee/section-1-ouverture-des-donnees-publiques/article-1/versions/modification-2",
            },
            "type": "FOR",
          }
        }
      />
    </Body>
  </Media>
</ListGroupItem>
`;
